docker/ops/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend-pod
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-pod
    spec:
      containers:
      - name: backend
        image: devtanna/foodable_back:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
