docker/ops/deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: db-pod
  template:
    metadata:
      name: db-pod
      labels:
        app: db-pod
    spec:
      containers:
      - name: mongo
        image: mongo
        imagePullPolicy: Never
        command: ["mongod", "--bind_ip_all", "--smallfiles", "--logpath=/dev/null"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-pv-claim
          mountPath: /data/db
      volumes:
      - name: mongo-pv-claim
        persistentVolumeClaim:
          claimName: mongo-pv-claim
