docker/ops/deploy-foodable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodable-deployment
  labels:
    app: foodable-deployment
spec:
  selector:
    matchLabels:
      app: foodable-pod
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  revisionHistoryLimit: 1
  template:
    metadata:
      name: foodable-pod
      labels:
        app: foodable-pod
    spec:
      containers:
      - name: foodable
        image: devtanna/foodable:v1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 4000
        command: ["npm","run","start"]
