docker/ops/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend-pod 
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-pod
    spec:
      containers:
      - name: frontend
        image: devtanna/foodable_front:v1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
        command: ["npm", "run", "dev"]
