docker/ops/deploy-scraper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-deployment
  labels:
    app: scraper-deployment
spec:
  selector:
    matchLabels:
      app: scraper-pod
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      name: scraper-pod
      labels:
        app: scraper-pod
    spec:
      containers:
      - name: scraper
        image: devtanna/foodable_scraper:v1.0
        imagePullPolicy: Always
        command: [
             "sh", "-c",
             "sh ./run_all_scrapers_script.sh &&
             cron -f"
        ]
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Dubai
