docker/ops/pod-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend-pod
spec:
  containers:
  - name: backend
    image: foodable_back
    imagePullPolicy: Never
    ports:
    - containerPort: 4000
