docker/ops/pod-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    app: db-pod
spec:
  containers:
  - name: mongo
    image: devtanna/foodable_db:v1.0
    imagePullPolicy: Always
    command: ["mongod", "--bind_ip_all", "--smallfiles", "--logpath=/tmp/mongod.log"]
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: mongo-pv-claim
      mountPath: /data/db
  volumes:
  - name: mongo-pv-claim
    persistentVolumeClaim:
      claimName: mongo-pv-claim
