docker/ops/pod-foodable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: foodable-pod
  labels:
    app: foodable-pod
spec:
  containers:
    - name: foodable
      image: devtanna/foodable:v1.0
      imagePullPolicy: Always
      ports:
        - containerPort: 4000
      command: ["npm","run","start"]
