docker/ops/pod-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    app: frontend-pod
spec:
  containers:
    - name: frontend
      image: devtanna/foodable_front:v1.0
      imagePullPolicy: Always
      ports:
        - containerPort: 5000
      command: ["npm", "run", "dev"]
