docker/ops/pod-scraper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scraper-pod
  labels:
    app: scraper-pod
spec:
  containers:
  - name: scraper
    image: devtanna/foodable_scraper:v1.0
    imagePullPolicy: Always
    command: [
             "sh", "-c",
             "sh ./run_all_scrapers_script.sh &&
             cron -f"
        ]
