docker/ops/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  type: NodePort
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 30004
    protocol: TCP
    name: http
  selector:
    app: backend-pod
