docker/ops/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: db-service
spec:
  type: NodePort
  ports:
  - port: 27017
    targetPort: 27017
    nodePort: 30007
    protocol: TCP
    name: http
  selector:
    app: db-pod
