docker/ops/service-foodable.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodable-service
  labels:
    app: foodable-service
spec:
  type: NodePort
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 30004
    protocol: TCP
    name: http
  selector:
    app: foodable-pod
