docker/ops/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30005
    protocol: TCP
    name: http
  selector:
    app: frontend-pod
