docker/ops/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: foodable-ingress
spec:
  backend:
    serviceName: foodable-service
    servicePort: 4000
#  rules:
#  - host: *
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: foodable-service
#          servicePort: 4000
#      - path: /graphql
#        backend:
#          serviceName: foodable-service
#          servicePort: 4000
#      - path: /subscribe
#        backend:
#          serviceName: foodable-service
#          servicePort: 4000
#      - path: /contactus
#        backend:
#          serviceName: foodable-service
#          servicePort: 4000
#      - path: /delivers-to-me
#        backend:
#          serviceName: foodable-service
#          servicePort: 4000
